[배지현] - 카테고리 레이아웃 수정

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -96,6 +96,15 @@ color: #7CC491;
 	width:1200px;
 }
 
+.menu-category{
+	width: 190px;
+}
+
+.menu-category > .category-bg{
+	height:60px;
+	background-color: #6CC491;
+ 	text-align: center;
+}
 
 .menu{
 	height:60px;
