--- a/src/main/resources/templates/books/best-seller.html
+++ b/src/main/resources/templates/books/best-seller.html
@@ -6,118 +6,118 @@
      
 
 		<section layout:fragment="contents">
-			
-		
+				
 		<div class="d-flex"> <!--  카테고리/ 결과 나란히 -->
 		
 		
-				<nav class="nav flex-column col-2 border-right text-center mr-4">
-					<h3 class="bg-secondary font-weight-bold my-4" th:if="${mallType =='Book'}">국내도서</h3>
-					<h3 class="bg-secondary font-weight-bold my-4" th:if="${mallType =='Foreign'}">해외도서</h3>
-					<h3 class="bg-secondary font-weight-bold my-4" th:if="${mallType =='eBook'}">eBook</h3>
-					<!-- 
-					  <a class="nav-link text-dark" href="/nunubooks/books?queryType=ItemNewAll">신간도서</a>
-					  <a class="nav-link text-dark" href="/nunubooks/books?queryType=ItemNewSpecial">화제의신간</a>
-					  <a class="nav-link text-dark" href="/nunubooks/books?queryType=Bestseller">베스트셀러</a>
-					 -->
-					<a class="nav-link text-dark" th:href="@{/nunubooks/books(queryType='ItemNewAll', mallType=${mallType})}">신간도서</a>
-				    <a class="nav-link text-dark" th:href="@{/nunubooks/books(queryType='ItemNewSpecial', mallType=${mallType})}">화제의신간</a>
-				    <a class="nav-link text-dark" th:href="@{/nunubooks/books(queryType='Bestseller', mallType=${mallType})}">베스트셀러</a>
-				</nav>
+			<nav class="menu-category flex-column border-right text-center mx-4">
+				<h3 class="category-bg font-weight-bold p-2 my-4" th:if="${mallType =='Book'}">국내도서</h3>
+				<h3 class="category-bg font-weight-bold p-2 my-4" th:if="${mallType =='Foreign'}">해외도서</h3>
+				<h3 class="category-bg font-weight-bold p-2 my-4" th:if="${mallType =='eBook'}">eBook</h3>
+				<!-- 
+				  <a class="nav-link text-dark" href="/nunubooks/books?queryType=ItemNewAll">신간도서</a>
+				  <a class="nav-link text-dark" href="/nunubooks/books?queryType=ItemNewSpecial">화제의신간</a>
+				  <a class="nav-link text-dark" href="/nunubooks/books?queryType=Bestseller">베스트셀러</a>
+				 -->
+				<a class="nav-link text-dark" th:href="@{/nunubooks/books(queryType='ItemNewAll', mallType=${mallType})}">신간도서</a>
+			    <a class="nav-link text-dark" th:href="@{/nunubooks/books(queryType='ItemNewSpecial', mallType=${mallType})}">화제의신간</a>
+			    <a class="nav-link text-dark" th:href="@{/nunubooks/books(queryType='Bestseller', mallType=${mallType})}">베스트셀러</a>
+			</nav>
+
 		
-		
-		<div class="contents">
-			<div>
-				<div class="d-flex align-items-center justify-content-between mt-4 queryType"  th:if="${queryType == 'Bestseller' }" th:data-query-id="${queryType}">
-					 <div class="d-flex align-items-center">
-						 <h3 class="font-weight-bold seller-option" >주간 베스트셀러</h3>
-						 <h5 class="font-weight-bold ml-1 week-info" th:text="|(${nowYear}년  ${nowMonth}월 ${nowWeek}주)|"></h5>
-					 </div>
-					 <div class="d-flex">
-						 <select class="form-control select mx-2" id="yearSel">
-						</select>
-						 <select class="form-control select mx-2" id="monthSel">
-						</select>
-						 <select class="form-control select ml-2" id="weekSel">
-						  <option value="1" th:selected="${nowWeek == 1 or week == 1}">1주</option>
-			              <option value="2" th:selected="${nowWeek == 2 or week == 2}">2주</option>
-			              <option value="3" th:selected="${nowWeek == 3 or week == 3}">3주</option>
-			              <option value="4" th:selected="${nowWeek == 4 or week == 4}">4주</option>
-			              <option value="5" th:selected="${nowWeek == 5 or week == 5}">5주</option>
-			             </select>
-					 <!-- 
-						<button type="button" class="btn btn-secondary mx-1" id="weekBtn" value="week">주간</button>
-						<button type="button" class="btn btn-secondary mx-1" id="monthBtn" value="month">월간</button>
-						<button type="button" class="btn btn-secondary mx-1" id="yearBtn" value="year">연간</button>
-					  -->
-					 </div>
-				</div>
-					  <div class="d-flex align-items-center mt-4 queryType" th:if="${queryType == 'ItemNewAll' }" th:data-query-id="${queryType}">
-						 <h3 class="font-weight-bold seller-option" >새로 나온 도서</h3>
-					 </div>
-					 <div class="d-flex align-items-center mt-4 queryType" th:if="${queryType == 'ItemNewSpecial'}" th:data-query-id="${queryType}">
-						 <h3 class="font-weight-bold seller-option" >화제의 신간</h3>
-					 </div>
-				
-				<div class="d-flex justify-content-end align-items-center my-3">
+			<div class="contents m-1">
+				<div>
+					<div class="d-flex align-items-center justify-content-between mt-4 queryType"  th:if="${queryType == 'Bestseller' }" th:data-query-id="${queryType}">
+						 <div class="d-flex align-items-center">
+							 <h3 class="font-weight-bold seller-option" >주간 베스트셀러</h3>
+							 <h5 class="font-weight-bold ml-1 week-info" th:text="|(${nowYear}년  ${nowMonth}월 ${nowWeek}주)|"></h5>
+						 </div>
+						 <div class="d-flex">
+							 <select class="form-control select mx-2" id="yearSel">
+							</select>
+							 <select class="form-control select mx-2" id="monthSel">
+							</select>
+							 <select class="form-control select ml-2" id="weekSel">
+							  <option value="1" th:selected="${nowWeek == 1 or week == 1}">1주</option>
+				              <option value="2" th:selected="${nowWeek == 2 or week == 2}">2주</option>
+				              <option value="3" th:selected="${nowWeek == 3 or week == 3}">3주</option>
+				              <option value="4" th:selected="${nowWeek == 4 or week == 4}">4주</option>
+				              <option value="5" th:selected="${nowWeek == 5 or week == 5}">5주</option>
+				             </select>
+						 <!-- 
+							<button type="button" class="btn btn-secondary mx-1" id="weekBtn" value="week">주간</button>
+							<button type="button" class="btn btn-secondary mx-1" id="monthBtn" value="month">월간</button>
+							<button type="button" class="btn btn-secondary mx-1" id="yearBtn" value="year">연간</button>
+						  -->
+						 </div>
+					</div>
+						  <div class="d-flex align-items-center mt-4 queryType" th:if="${queryType == 'ItemNewAll' }" th:data-query-id="${queryType}">
+							 <h3 class="font-weight-bold seller-option" >새로 나온 도서</h3>
+						 </div>
+						 <div class="d-flex align-items-center mt-4 queryType" th:if="${queryType == 'ItemNewSpecial'}" th:data-query-id="${queryType}">
+							 <h3 class="font-weight-bold seller-option" >화제의 신간</h3>
+						 </div>
 					
-					<div class="d-flex">
-						<select class="form-control select mx-2" id="maxResultSel">
-							<option th:selected="${maxResults == 10}" value="10">10개씩 보기</option>
-							<option th:selected="${maxResults == 20}" value="20">20개씩 보기</option>
-							<option th:selected="${maxResults == 50}" value="50">50개씩 보기</option>
-						</select>
-						<button type="button" class="btn btn-light btn-outline-secondary mr-1"><i class="bi bi-heart"></i></button>
-						<button type="button" class="btn btn-light btn-outline-secondary mr-1" id="multiCartBtn"><i class="bi bi-cart"></i></button>
+					<div class="d-flex justify-content-end align-items-center my-3">
+						
+						<div class="d-flex">
+							<select class="form-control select mx-2" id="maxResultSel">
+								<option th:selected="${maxResults == 10}" value="10">10개씩 보기</option>
+								<option th:selected="${maxResults == 20}" value="20">20개씩 보기</option>
+								<option th:selected="${maxResults == 50}" value="50">50개씩 보기</option>
+							</select>
+							<button type="button" class="btn btn-light btn-outline-secondary mr-1"><i class="bi bi-heart"></i></button>
+							<button type="button" class="btn btn-light btn-outline-secondary mr-1" id="multiCartBtn"><i class="bi bi-cart"></i></button>
+							<!-- 
+							<button type="button" class="btn btn-light btn-outline-secondary mr-1" id="outofStockBtn" value="0">품절/절판 제외</button>
+							 -->
+							 <select class="form-control" id="outofStockSel">
+								<option value="0" th:selected="${outofStock == 0}">품절/절판 포함</option>
+								<option value="1" th:selected="${outofStock == 1}">품절/절판 제외</option>
+							 </select>
+						</div>
+					</div>
+				</div>	
+					
+				<div class="d-flex align-items-center book-info p-2 border my-3 mx-1" th:each="book, status: ${seller.item}">
+					<div class="mx-3 info-checkbox">
+					<span th:text="${status.count}">1</span>
+						<input type="checkbox" class="item-checkbox" th:data-item-id="${book.itemId}">
+					</div>
+					<img th:src="${book.cover}" class="info-img">
+					<div class="mx-3 info-title">
+						<a th:href="|/nunubooks/product?itemId=${book.itemId}|" class="text-dark">
+							<h5 class="font-weight-bold" th:utext="${book.title}">책 제목 어쩌구저쩌구</h5>
+						</a>
+						<h6 th:text="|${book.author}|">저자</h6>
+						<div class="d-flex align-items-center">
+							<h6 th:text="${book.publisher}">출판사</h6>
+							<h6 class= "ml-3" th:text="${book.pubDate}">출판일</h6>
+						</div>
+					</div>
 						<!-- 
-						<button type="button" class="btn btn-light btn-outline-secondary mr-1" id="outofStockBtn" value="0">품절/절판 제외</button>
+						<div class="mx-3 info-price">품절</div>
+						<div class="mx-3 info-price" th:if="${book.stockStatus =='절판'}">절판</div>
+						<div class="mx-3 info-price" th:if="${book.stockStatus ==''  or book.stockStatus =='예약판매'}">
 						 -->
-						 <select class="form-control" id="outofStockSel">
-							<option value="0" th:selected="${outofStock == 0}">품절/절판 포함</option>
-							<option value="1" th:selected="${outofStock == 1}">품절/절판 제외</option>
-						 </select>
+					 <div class="text-center info-price p-1">
+						<del><span th:text="|${#numbers.formatInteger(book.priceStandard, 3, 'COMMA')} 원|">정가 </span></del>
+						<span class="text-success font-weight-bold h6" th:text="|(${book.discount}%)|">(10%)</span> 
+						<div class="font-weight-bold text-primary ml-1" th:text="|${#numbers.formatInteger(book.priceSales, 3, 'COMMA')} 원|">할인가</div>
+						<div class="font-weight-bold text-info ml-1 text-small" th:text="|(${#numbers.formatInteger(book.mileage, 3, 'COMMA')} point)|">포인트</div>
+					</div>
+					<div class="info-cart" >
+						<div class="text-center my-3">
+							<button type="button" class="btn btn-outline-secondary cartBtn" th:data-item-id="${book.itemId}">장바구니</button>
+						</div>
+						<div class="text-center my-3">
+							<button type="button" class="btn btn-outline-secondary" th:data-item-id="${book.itemId}">바로구매</button>
+						</div>
 					</div>
 				</div>
-			</div>	
-				
-			<div class="d-flex align-items-center book-info p-2 border my-3 mx-1" th:each="book, status: ${seller.item}">
-				<div class="mx-3 info-checkbox">
-				<span th:text="${status.count}">1</span>
-					<input type="checkbox" class="item-checkbox" th:data-item-id="${book.itemId}">
-				</div>
-				<img th:src="${book.cover}" class="info-img">
-				<div class="mx-3 info-title">
-					<a th:href="|/nunubooks/product?itemId=${book.itemId}|" class="text-dark">
-						<h5 class="font-weight-bold" th:utext="${book.title}">책 제목 어쩌구저쩌구</h5>
-					</a>
-					<h6 th:text="|${book.author}|">저자</h6>
-					<div class="d-flex align-items-center">
-						<h6 th:text="${book.publisher}">출판사</h6>
-						<h6 class= "ml-3" th:text="${book.pubDate}">출판일</h6>
-					</div>
-				</div>
-					<!-- 
-					<div class="mx-3 info-price">품절</div>
-					<div class="mx-3 info-price" th:if="${book.stockStatus =='절판'}">절판</div>
-					<div class="mx-3 info-price" th:if="${book.stockStatus ==''  or book.stockStatus =='예약판매'}">
-					 -->
-				 <div class="text-center info-price p-1">
-					<del><span th:text="|${#numbers.formatInteger(book.priceStandard, 3, 'COMMA')} 원|">정가 </span></del>
-					<span class="text-success font-weight-bold h6" th:text="|(${book.discount}%)|">(10%)</span> 
-					<div class="font-weight-bold text-primary ml-1" th:text="|${#numbers.formatInteger(book.priceSales, 3, 'COMMA')} 원|">할인가</div>
-					<div class="font-weight-bold text-info ml-1 text-small" th:text="|(${#numbers.formatInteger(book.mileage, 3, 'COMMA')} point)|">포인트</div>
-				</div>
-				<div class="info-cart" >
-					<div class="text-center my-3">
-						<button type="button" class="btn btn-outline-secondary cartBtn" th:data-item-id="${book.itemId}">장바구니</button>
-					</div>
-					<div class="text-center my-3">
-						<button type="button" class="btn btn-outline-secondary" th:data-item-id="${book.itemId}">바로구매</button>
-					</div>
-				</div>
-			</div>
-	
-	</div>	<!--  전체 div -->
+		
+		</div>	
+	</div><!--  전체 div -->
 	
 		</section>
 
